k8s/apps/immich/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-internal
  namespace: immich
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway-system
      sectionName: websecure
  hostnames:
    - immich.internal.grendel71.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: immich-server
          port: 2283
